# compendium-backend

./: .gitignore  Dockerfile  README.md  helper.py  main.py  pylintrc  pyproject.toml
.github/workflows/: docker-image.yml  pylint.yml
